<resources>
    <string name="app_name">PerSell</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="menu_Home">Home</string>
    <string name="menu_Profile">Profile</string>
    <string name="menu_Search">Search</string>
    <string name="menu_Sales">Sales</string>
    <string name="menu_SaledItem">Sold Item</string>
    <string name="menu_Order">Ordered Item</string>
    <string name="menu_About">About</string>
    <string name="menu_logout">Logout</string>

    <string name="profile_editProfile">Edit Profile</string>
    <string name="profile_ChangePassword">Change Password</string>
    <string name="profile_EditBankAcc">View Bank Account</string>

    <string name="PerSell">PerSell</string>
    <string name="UserName">UserName</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUpForPerSell">Sign Up  for PerSell</string>
    <string name="logoPersell">logo Persell</string>
    <string name="title_activity_insert">InsertActivity</string>
    <string name="State">State</string>
    <string name="Bank">Bank</string>
    <string name="Category">Category</string>
    <string name="ItemStatus">Item Status</string>
    <string name="ContactStatus">Contact Status</string>
    <string name="OrderStatus">Order Status</string>
    <string name="View">View</string>
    <string name="title_activity_user_register1">UserRegister1Activity</string>
    <string name="UserPhoto">UserPhoto</string>
    <string name="UploadPhoto">Upload Your Photo</string>
    <string name="Name">Your Name</string>
    <string name="Phone">Your Phone Number</string>
    <string name="Email">Your Email Address</string>
    <string name="Address">Your Address</string>
    <string name="Poskod">Poskod Number</string>
    <string name="City">City</string>
    <string name="Next">Next</string>
    <string name="title_activity_user_register2">UserRegister2Activity</string>
    <string name="Facebook">Your Facebook Name</string>
    <string name="UserDetail">Add Detail / Introduce Yourself</string>
    <string name="BankAccount">Bank Account</string>
    <string name="Back">Back</string>
    <string name="title_activity_insert_bank_account">InsertBankAccountActivity</string>
    <string name="AccountNumber">Your Account Number</string>
    <string name="YourAccName">Your Account Name; ex: Lee Min Hua</string>
    <string name="Add">ADD</string>
    <string name="title_activity_user_register3">UserRegister3Activity</string>
    <string name="CreateUserID">Create Your Own ID</string>
    <string name="CreateUsernamePassword"><![CDATA[Create Username & Password]]></string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Done">Done</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_sales">SalesActivity</string>
    <string name="ItemInfo">Sales Item</string>
    <string name="UploadItemImage">Upload Item\'s Photo</string>
    <string name="watItem">What\'s Your Item?</string>
    <string name="Price">What\'s Your Item\'s Price?</string>
    <string name="ItemDetail">Describe Your Item</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="Profile">Profile</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="poskodNo">Poskod No</string>
    <string name="Submit">Submit</string>
    <string name="title_activity_password_change">PasswordChangeActivity</string>
    <string name="OldPassword">Old Password</string>
    <string name="NewPassword">New Password</string>
    <string name="title_activity_view_acc">ViewAccActivity</string>
    <string name="DeleteAll">Delete All</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="DisplayItemDetail">Item Detail</string>
    <string name="Owner">Owner</string>
    <string name="MoreDetail">More Detail</string>
    <string name="title_activity_owner">OwnerActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="Search">Search</string>
    <string name="SearchTitleOnly">Search Title Only</string>
    <string name="example">Example: iphone 6s, Samsung, car, etc.</string>
    <string name="title_activity_sold">SoldActivity</string>
    <string name="Sold">Sold</string>
    <string name="Available">Available</string>
    <string name="Booked">Booked</string>
    <string name="title_activity_sold_item">SoldItemActivity</string>
    <string name="Purchase">Purchase</string>
    <string name="Comment">Comment</string>
    <string name="Message">Message</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="Send">Send</string>
    <string name="WriteaComment">Write a comment...</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_order">OrderActivity</string>
</resources>
