<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jarry.projectpsm.EditProfileActivity"
    android:id="@+id/editProfilelayout"
    android:background="#ffcdafff">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/img_photo"
        android:src="@mipmap/human_icon"
        android:contentDescription="@string/UserPhoto"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/UploadPhoto"
        android:id="@+id/textView7"
        android:textColor="#ffff0b0b"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="73dp"
        android:layout_alignBottom="@+id/img_photo"
        android:layout_alignLeft="@+id/img_photo"
        android:layout_alignStart="@+id/img_photo" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etName"
        android:background="#fffffff9"
        android:layout_alignParentStart="true"
        android:hint="@string/Name"
        android:backgroundTint="#ffd0fffa"
        android:layout_below="@+id/textView7"
        android:layout_marginLeft="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/etPhone"
        android:backgroundTint="#ffd0fffa"
        android:background="#fffffff9"
        android:hint="@string/Phone"
        android:layout_below="@+id/etName"
        android:layout_alignLeft="@+id/etName"
        android:layout_alignStart="@+id/etName" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:hint="@string/Email"
        android:backgroundTint="#ffd0fffa"
        android:background="#fffffff9"
        android:layout_below="@+id/etPhone"
        android:layout_alignLeft="@+id/etPhone"
        android:layout_alignStart="@+id/etPhone" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etFacebook"
        android:background="#fffffff9"
        android:hint="@string/Facebook"
        android:backgroundTint="#ffd0fffa"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etDetail"
        android:background="#fffffff9"
        android:backgroundTint="#ffd0fffa"
        android:hint="@string/UserDetail"
        android:layout_below="@+id/etFacebook"
        android:layout_alignLeft="@+id/etFacebook"
        android:layout_alignStart="@+id/etFacebook" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etAddress"
        android:background="#fffffff9"
        android:hint="@string/Address"
        android:backgroundTint="#ffd0fffa"
        android:layout_below="@+id/etDetail"
        android:layout_alignLeft="@+id/etDetail"
        android:layout_alignStart="@+id/etDetail"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:id="@+id/btn_submit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/etPoskod"
        android:backgroundTint="#ffd0fffa"
        android:background="#fffffff9"
        android:hint="@string/poskodNo"
        android:layout_below="@+id/etAddress"
        android:layout_alignLeft="@+id/etAddress"
        android:layout_alignStart="@+id/etAddress" />

    <EditText
        android:layout_width="230dp"
        android:layout_height="27dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etCity"
        android:background="#fffffff9"
        android:hint="@string/City"
        android:backgroundTint="#ffd0fffa"
        android:layout_below="@+id/etAddress"
        android:layout_toRightOf="@+id/etPoskod"
        android:layout_toEndOf="@+id/etPoskod" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:id="@+id/sp_State"
        android:background="#fffffff9"
        android:backgroundTint="#ffd0fffa"
        android:layout_below="@+id/etPoskod"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/etPoskod"
        android:layout_alignStart="@+id/etPoskod" />

</RelativeLayout>
