<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jarry.projectpsm.UserRegister1Activity"
    android:background="#ffcdafff"
    android:id="@+id/UserRegister1">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/img_ItemPhoto"
        android:src="@mipmap/human_icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/UserPhoto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/UploadPhoto"
        android:id="@+id/textView"
        android:textColor="#ffff0b0b"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/img_ItemPhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etName"
        android:layout_below="@+id/img_ItemPhoto"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#fffffff9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/Name"
        android:backgroundTint="#ffd0fffa"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/etPhone"
        android:backgroundTint="#ffd0fffa"
        android:background="#fffffff9"
        android:hint="@string/Phone"
        android:layout_below="@+id/etName"
        android:layout_alignLeft="@+id/etName"
        android:layout_alignStart="@+id/etName"
        android:layout_alignRight="@+id/etName"
        android:layout_alignEnd="@+id/etName" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:hint="@string/Email"
        android:backgroundTint="#ffd0fffa"
        android:background="#fffffff9"
        android:layout_below="@+id/etPhone"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/etPhone"
        android:layout_alignEnd="@+id/etPhone" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etAddress"
        android:hint="@string/Address"
        android:backgroundTint="#ffd0fffa"
        android:background="#fffffff9"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etPoskod"
        android:background="#fffffff9"
        android:backgroundTint="#ffd0fffa"
        android:hint="@string/Poskod"
        android:layout_below="@+id/etAddress"
        android:layout_alignLeft="@+id/etAddress"
        android:layout_alignStart="@+id/etAddress"
        android:layout_alignRight="@+id/etAddress"
        android:layout_alignEnd="@+id/etAddress"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:id="@+id/etCity"
        android:layout_below="@+id/etPoskod"
        android:background="#fffffff9"
        android:backgroundTint="#ffd0fffa"
        android:hint="@string/City"
        android:layout_alignLeft="@+id/etPoskod"
        android:layout_alignStart="@+id/etPoskod"
        android:layout_alignRight="@+id/etPoskod"
        android:layout_alignEnd="@+id/etPoskod"
        android:layout_marginBottom="5dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:id="@+id/sp_State"
        android:background="#fffffff9"
        android:backgroundTint="#ffd0fffa"
        android:layout_below="@+id/etCity"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:id="@+id/btn_Next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
