<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jarry.projectpsm.SalesActivity"
    android:id="@+id/saleslayout"
    android:background="#ffcdafff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ItemInfo"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff0a11ff"
        android:textSize="25dp"
        android:textStyle="bold|italic"
        android:layout_margin="5dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/img_ItemPhoto"
        android:src="@mipmap/human_icon"
        android:contentDescription="@string/UserPhoto"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/UploadItemImage"
        android:id="@+id/textView5"
        android:textColor="#ffff0b0b"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="70dp"
        android:layout_alignBottom="@+id/img_ItemPhoto"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etItemName"
        android:background="#fffffff9"
        android:hint="@string/watItem"
        android:backgroundTint="#ffd0fffa"
        android:layout_below="@+id/img_ItemPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/spinner_category"
        android:background="#fffffff9"
        android:backgroundTint="#ffd0fffa"
        android:layout_below="@+id/etItemName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etPrice"
        android:background="#fffffff9"
        android:backgroundTint="#ffd0fffa"
        android:hint="@string/Price"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/spinner_category"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etItemDetail"
        android:background="#fffffff9"
        android:backgroundTint="#ffd0fffa"
        android:hint="@string/ItemDetail"
        android:layout_below="@+id/etPrice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        android:id="@+id/btn_done"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/etItemDetail"
        android:layout_alignEnd="@+id/etItemDetail" />

</RelativeLayout>
