<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jarry.projectpsm.PasswordChangeActivity"
    android:id="@+id/passwordchange"
    android:background="#ffcdafff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_ChangePassword"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff1455ff"
        android:textStyle="bold|italic"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etOld"
        android:background="#fffffff9"
        android:backgroundTint="#ffd0fffa"
        android:hint="@string/OldPassword"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etNew"
        android:background="#fffffff9"
        android:backgroundTint="#ffd0fffa"
        android:hint="@string/NewPassword"
        android:layout_below="@+id/etOld"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etConfirm"
        android:background="#fffffff9"
        android:backgroundTint="#ffd0fffa"
        android:hint="@string/ConfirmPassword"
        android:layout_below="@+id/etNew"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:id="@+id/btn_submit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
